feat: add authentication JWT and probes
