# main.go
@@ -5,6 +5,7 @@ import (
 	"github.com/igordevopslabs/jiujitsu-posts/config"
 	"github.com/igordevopslabs/jiujitsu-posts/controller"
 	docs "github.com/igordevopslabs/jiujitsu-posts/docs"
+	"github.com/igordevopslabs/jiujitsu-posts/middleware"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -13,6 +14,7 @@ func init() {
 
 	config.LoadEnvs()
 	config.ConnectToDB()
+	config.SyncDatabase() //migrate DB
 }
 
 // @title API Jiu-Jitsu Posts
@@ -20,18 +22,30 @@ func init() {
 // @description API simples para retornar os maiores jargões do jiu-jitsu através de posts objetivos.
 // @host localhost:5000
 // @BasePath /
+// @SecurityDefinitions BearerAuth
+// @in header
+// @name Authorization
 
 func main() {
 	r := gin.Default()
 
 	docs.SwaggerInfo.BasePath = "/"
 
+	//Docs
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
-	r.POST("/post", controller.CreatePost)
-	r.GET("/posts", controller.GetAllPosts)
+
+	//Entities Routes
+	r.POST("/singup", controller.Singup)
+	r.POST("/login", controller.Login)
 	r.GET("/posts/:id", controller.GetPostByID)
-	r.PUT("/post/:id", controller.UpdatePost)
-	r.DELETE("/post/:id", controller.DeletePost)
+	r.GET("/posts", controller.GetAllPosts)
+	r.POST("/post", middleware.RequireAuth, controller.CreatePost)
+	r.PUT("/post/:id", middleware.RequireAuth, controller.UpdatePost)
+	r.DELETE("/post/:id", middleware.RequireAuth, controller.DeletePost)
+
+	//Probe Routes
+	r.GET("/healthy", config.Health)
+	r.GET("/ready", config.Ready)
 
 	r.Run()
 }
